                        GPSD project news

3.21.1~dev: in progress
  Added contrib/gpscsv to convert gpsd JSON to csv.
  Added nSat and uSat to SKY JSON.  Old clients can not read new SKY.

3.21: 2020-08-04
  Create python programs from .in files to allow macro substitution.
  Finally clean .sconsign*.dblite with "scons -c"
  Remove revision.h.  Move REVISION into gpsd_config.h
  Change asciidoc to asciidoctor, and revise documents to match.
  library version bumped to 27
  Add leap_seconds to gps_data_t
  Add/change many rtcm2 structs in gps.h
  Add/change many rtcm3 structs in gps.h
  Maindenhead now 8 chars.
  Add icondir and sharedir install options
  Install basic doc in sharedir
  Move gps_data_t->status to gps_fix_t.status for better fix merging
  The gps python module is now Pure Python + FFI.  FFI only for packet.py
  User should manually delete any old packet*so.
  Add wspeedt, wspeedr, wanglem, wanglet, wangler to  gps_fix_t
  Add "-p CONFIG", "-p STATUS", "-t" and "-tt" options to ubxtool.
  Add python_shebang option to scons config.
  gpsrinex has long options and many new options.
  Added long options to gpsd.
  Remove unused FORCE_GLOBAL_ENABLE
  Remove config option reconfigure, replace with -p, --passive runtime option.
  Remove config option controlsend (RECONFIGURE_ENABLE)
  Add config option rundir=XX.  Default set to /run, or /var/run as required.
  Fixes for Python 2.6 up to 3.9.

3.20: 2019-12-31
  Change README into an asciidoc file and publish HTML from it
  Add NED and geoid_sep to gps_fix_t and TPV JSON.
  Add "-e NED" to ubxtool to enable NED messages.
  gpsdata.separation replaced by gpsdata.fix.geoid_sep.
  Remove nofloats build option.
  TPV JSON "alt" is now fixed at WGS84.  Probably.
  xgps now uses XGPSOPTS environment variable.
  add health variable to satellite_t
  change satellite_t elevation and azimuth to double
  satellite_t elevation, azimuth, and ss use NAN for unknown value.
  add altMSL, altHAE, and depth, to gps_fix_t